[package]
name = "cctup-substreams"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
prost = "0.11"
prost-types = "0.11"
hex = "0.4"
serde_json = "1.0"

[build-dependencies]
substreams-ethereum = "0.9"
prost-build = "0.11"
